--- a/deploy.yml
+++ b/deploy.yml
@@ -3,8 +3,8 @@
 - hosts: localhost
   connection: local
   vars:
-    wimpy_project_name: "canary"
-    wimpy_app_port: 80
+    wimpy_application_name: "canary"
+    wimpy_application_port: 80
     wimpy_aws_keypair: "ec2_personal"
     wimpy_aws_hosted_zone_name: "armesto.net"
   roles:
