--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   canary:
-    image: "${DOCKER_REGISTRY}/canary2"
+    image: ${DOCKER_REGISTRY}/canary2
     ports:
       - "80:80"
     environment:
