--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -1,9 +1,10 @@
 version: '2'
 services:
   canary:
-    image: 249370547432.dkr.ecr.eu-west-1.amazonaws.com/canary2
+    image: ${DOCKER_REGISTRY}/canary2
     ports:
       - "80:80"
     environment:
+      - ENVIRONMENT
       - S3_BUCKET
       - KMS_MASTER_KEY
