--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ cache:
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-engine
-  - sudo pip install awscli
+  - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
 
 install: composer install
 
